BOT-31: extracted proxy into a separate entity, created gen for posts
